# tee-offchain

./: .gitignore  Cargo.toml  Dockerfile  Makefile  NOTICE  README.md  hardhat.config.ts  package-lock.json  package.json  rust-toolchain.toml  setup_accounts.sh  wasm32-unknown-unknown.json
.github/workflows/: ci.yml
.pause.github/workflows/: Static.yml
contracts/: OffchainHashMachine.sol  VeiledToken.sol
examples/: schema.rs
kit/: README.md
kit/test/apps/dev-only/src/: app.html
kit/test/apps/dev-only/src/lib/: database.js
kit/test/apps/dev-only/src/routes/: +localStorage.api  +page.svelte
oasis/: README.md  hardhat.config.ts  package-lock.json  package.json
oasis/contracts/: VeiledToken.sol
oasis/scripts/: hashMachine.ts
oasis/test/: OffchainHashMachine.ts  VeiledToken.ts
schema/: handle_answer.json  query_msg.json  secret_contract_template.json  state.json
schema/raw/: execute.json  query.json  response_to_get_state.json  response_to_iterate_hash.json
scripts/: balance.ts  client.ts  contract.ts  deploy.ts  deployVeiledToken.ts  query.ts  runVeiledToken.ts  upload.js
secretnetwork/: Cargo.toml  README.md
secretnetwork/examples/: schema.rs
secretnetwork/schema/: execute_msg.json  handle_msg.json  init_msg.json  query_msg.json
secretnetwork/src/: contract.rs  error.rs  msg.rs
secretnetwork/website/: demo-css.css  demo-frm.html  home  redundant-html-code
secretnetwork/worker/js/src/: worker.js
src/: contract.rs  lib.rs  msg.rs  state.rs  utils.rs
test/: OffchainHashMachine.ts
website/: Keplr-phrase.rtf  demo-home  demo-home.html  demo-send.html  form-swirl.html  form-template-style  tunnel.html
worker/js/: .env  package.json
